tests/success/comptime/trivially_relocate_values.bz
import std::meta::comptime;
import resource;

function test()
{
	(consteval {
		let vals = std::meta::malloc(i32, 10);
		defer std::meta::free(vals);

		for (let i in 0..8)
		{
			__builtin_inplace_construct(vals + i, i);
		}

		__builtin_trivially_relocate_values(vals + 2, vals, 8);

		for (let i in 2..10)
		{
			if (*(vals + i) != i - 2) unreachable;
			__builtin_destruct_value(*(vals + i));
		}
	});

	(consteval {
		let vals = std::meta::malloc(i32, 10);
		defer std::meta::free(vals);

		for (let i in 2..10)
		{
			__builtin_inplace_construct(vals + i, i);
		}

		__builtin_trivially_relocate_values(vals, vals + 2, 8);

		for (let i in 0..8)
		{
			if (*(vals + i) != i + 2) unreachable;
			__builtin_destruct_value(*(vals + i));
		}
	});

	(consteval {
		let vals = std::meta::malloc(resource_t, 10);
		defer std::meta::free(vals);

		for (let i in 0..8)
		{
			__builtin_inplace_construct(vals + i, resource_t());
		}

		__builtin_trivially_relocate_values(vals + 2, vals, 8);

		for (let i in 2..10)
		{
			__builtin_destruct_value(*(vals + i));
		}
	});

	(consteval {
		let vals = std::meta::malloc(resource_t, 10);
		defer std::meta::free(vals);

		for (let i in 2..10)
		{
			__builtin_inplace_construct(vals + i, resource_t());
		}

		__builtin_trivially_relocate_values(vals, vals + 2, 8);

		for (let i in 0..8)
		{
			__builtin_destruct_value(*(vals + i));
		}
	});
}
