tests/error/comptime/check_dereference02.bz
function test()
{
	(consteval {
		let arr: [??: int32] = [ 0, 1, 2 ];
		let p = &arr[0];
		*(p + arr.size());
	});
}
